changed language code + formatted index

--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,46 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Belasting-berekenen.nl</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-  <meta property="og:title" content="Belasting-berekenen.nl">
-  <meta property="og:site_name" content="Belasting-berekenen.nl">
-  <meta property="og:description" content="Hoeveel belasting betaal jij? Bereken nu!">
-  <meta property="og:url" content="http://www.belasting-berekenen.nl/">
-  <meta property="og:image" content="assets/images/prinsjesdag.jpg">
-  <meta property="og:locale" content="nl_NL">  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,700i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,700" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39193537-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-39193537-1');
-</script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="nl">
+  <head>
+    <meta charset="utf-8" />
+    <title>Belasting-berekenen.nl</title>
+    <base href="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes"
+    />
+    <meta property="og:title" content="Belasting-berekenen.nl" />
+    <meta property="og:site_name" content="Belasting-berekenen.nl" />
+    <meta property="og:description" content="Hoeveel belasting betaal jij? Bereken nu!" />
+    <meta property="og:url" content="http://www.belasting-berekenen.nl/" />
+    <meta property="og:image" content="assets/images/prinsjesdag.jpg" />
+    <meta property="og:locale" content="nl_NL" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,700i" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,700" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39193537-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-39193537-1");
+    </script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
